nouvelle version du site et test formulaire contact

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
             <div class="profile">
                 <img src="Pictures/menu_picture.png" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light">Joris Lasserre</h1>
+                <h1>Joris Lasserre</h1>
                 <p>Je suis étudiant en <span class="orange">Informatique</span> à l'IUT de Bordeaux. Bienvenue sur mon site !
                 </p>
                 <hr>
