--- a/retex/Odomo.html
+++ b/retex/Odomo.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="color-scheme" content="only light">
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Syloti+Nagri&family=Open+Sans:wght@400;600&display=swap"
         rel="stylesheet">
@@ -90,7 +91,7 @@
                     La difficulté était croissante, cela a commencé par de simples modifications de fonctions jusqu'à la création d'une classe complète.
                     Tout au long du projet j'ai appris à travailler sur du <span class="orange">code fourni </span> et des <span class="orange">matrices</span>, ainsi qu'à prendre en main le système de classes. </p> 
                 <div class="retex_dl_button">
-                    <button class="btn" href="" download=""><i class="fa fa-download"></i> Download</button>
+                    <a class="btn" href="odomo.pdf" download="odomo.pdf"><i class="fa fa-download"></i> Download</a>
                 </div>
                    
             </div>
