--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/5ade61bb68.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    <meta name="color-scheme" content="only light">
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Syloti+Nagri&family=Open+Sans:wght@400;600&display=swap"
         rel="stylesheet">
