--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             </div>
 
             <div id="intro">
-                <p>Bienvenue sur mon portfolio ! Je suis Joris Lasserre, étudiant en BUT informatique. Ce site a été créé pour vous donner un aperçu de mes compétences et de mes projets. Vous y trouverez des informations sur mes expériences professionnelles, mes compétences techniques ainsi que mes projets personnels. J'espère que vous apprécierez parcourir mon portfolio et n'hésitez pas à me contacter si vous avez des questions ou si vous êtes intéressé par une collaboration !</p>
+                <p>Bienvenue sur mon portfolio ! Je suis Joris Lasserre, étudiant en BUT informatique. 
+                    Ce site a été créé pour vous donner un aperçu de mes compétences et de mes projets. 
+                    Vous y trouverez des informations sur mes expériences professionnelles, mes compétences techniques ainsi que mes projets personnels. 
+                    J'espère que vous apprécierez parcourir mon portfolio, si vous avez des questions la rubrique contact est là pour ça !</p>
 
             </div>
 
