--- a/retex/Odomo.html
+++ b/retex/Odomo.html
@@ -12,6 +12,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="color-scheme" content="only light">
+        <link rel="icon" type="image/png" href="../Pictures/jl.png"/>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Syloti+Nagri&family=Open+Sans:wght@400;600&display=swap"
         rel="stylesheet">
