--- a/retex/Odomo.html
+++ b/retex/Odomo.html
@@ -59,6 +59,7 @@
 
     <main class="all_retex">
         <div class="zerow" style="flex-direction: row;">
+            <button id="hamburger-btn">&#9776;</button>
             <div class="retex_title">
                 <a href="../work.html"><i class="fa-solid fa-chevron-left"></i></a>
                 <h1>Odomo</h1>
@@ -98,6 +99,13 @@
             </div>
 
         </div>
+        <script>const hamburgerBtn = document.getElementById("hamburger-btn");
+            const menu = document.getElementById("header");
+            
+            hamburgerBtn.addEventListener("click", () => {
+        
+              menu.classList.toggle("show");
+            });</script>
     </main>
 
 
