site version nouvelle page contact et un peu plus responsive

--- a/retex/Cannaj.html
+++ b/retex/Cannaj.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Syloti+Nagri&family=Open+Sans:wght@400;600&display=swap"
         rel="stylesheet">
 
-    <title>Lasserre Joris - Projet Biosphère7</title>
+    <title>Lasserre Joris - Projet Web </title>
 </head>
 
 <body class="workbody">
@@ -62,8 +62,8 @@
             <button id="hamburger-btn">&#9776;</button>
             <div class="retex_title">
                 <a href="../work.html"><i class="fa-solid fa-chevron-left"></i></a>
-                <h1>Biosphère7</h1>
-                <p>Le projet Biosphère se composait de 2 phases: la 1ère consistait à coder les règles d'un jeu de plateau tandis que la deuxième consistait à créer une IA pour y jouer.</p>
+                <h1>Cannaj</h1>
+                <p>Cannaj est un site en HTML et CSS mettant en forme les informations obtenues lors d'un précèdent projet en Gestion et Communication</p>
             </div>
 
           
@@ -73,15 +73,15 @@
                         <h3>Information sur le projet</h3>
                         <hr>
                         <ul>
-                            <li><i class="fa-solid fa-gears"></i>Catégorie : Application console</li>
-                            <li><i class="fa-solid fa-code"></i>Langages : Java</li>
-                            <li><i class="fa-solid fa-calendar-days"></i> Date : Décembre 2022 - Janvier 2023</li>
-                            <li><i class="fa-solid fa-users"></i>Taille d'équipe : Seul / À deux </li>
+                            <li><i class="fa-solid fa-gears"></i>Catégorie : Site Web</li>
+                            <li><i class="fa-solid fa-code"></i>Langages : HTML / CSS</li>
+                            <li><i class="fa-solid fa-calendar-days"></i> Date : Décembre 2022</li>
+                            <li><i class="fa-solid fa-users"></i>Taille d'équipe : À deux </li>
                         </ul>
                     </div>
 
-                    <div class="col2">
-                        <img class="img_preuve" src="../Pictures/biosphere_screen.png" alt="screen_biosphère7">
+                    <div class="col2" >
+                        <img class="img_preuve" src="../Pictures/cannaj_screen.png" alt="screen_cannaj" style="margin-left: 2em; width: 80%">
                     </div>
 
              
@@ -89,8 +89,9 @@
 
             <div class="ligne">
                 <h3>Description du projet</h3>
-                <p>Le projet biosphère est un jeu de plateau original où plusieurs actions sont possibles à chaque tour. Le but étant de gagner en aillant plus de points que son adversaire.
-                    Lors de ce projet j'ai appris à implémenter des algorithmes d'IA notamment <span class="orange"> l'algorithme MinMax</span>, à travailler sur des matrices ainsi que sur un projet déjà existant. Lors de la deuxième parti j'ai appris les bases de <span class="orange">git</span> pour travailler à deux sur le projet. </span> </p> 
+                <p>Ce projet consistait à créer un site web uniquement en <span> HTML / CSS</span> regroupant les informations essentiels de l'analyse de CapGemini (voir le retour d'expérience <a href="GestionCom.html"> Gestion et Communication.</a>) 
+                Nous avons du aussi créer un persona et faire en sorte que notre site soit adapter à ce persona, dans notre cas nous avions fais un site à l'interface simple adapté à des personnes peu habitué aux nouvelles technologies. Une des consignes était aussi la présence d'une page en <span class="orange">anglais </span>.
+                </p> 
                 <div class="retex_dl_button">
                     <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf"><i class="fa fa-download"></i> Download</a>
                 </div>
