--- a/retex/Odomo.html
+++ b/retex/Odomo.html
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="col2">
-                        <img class="img_preuve" src="../Pictures/odomo_screen1.png" ">
+                        <img class="img_preuve" src="../Pictures/odomo_screen1.png" alt="screen_odomo">
                     </div>
 
              
