--- a/retex/installationPoste.html
+++ b/retex/installationPoste.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Syloti+Nagri&family=Open+Sans:wght@400;600&display=swap"
         rel="stylesheet">
 
-    <title>Lasserre Joris - Projet Biosphère7</title>
+    <title>Lasserre Joris - Installation de poste </title>
 </head>
 
 <body class="workbody">
@@ -62,8 +62,8 @@
             <button id="hamburger-btn">&#9776;</button>
             <div class="retex_title">
                 <a href="../work.html"><i class="fa-solid fa-chevron-left"></i></a>
-                <h1>Biosphère7</h1>
-                <p>Le projet Biosphère se composait de 2 phases: la 1ère consistait à coder les règles d'un jeu de plateau tandis que la deuxième consistait à créer une IA pour y jouer.</p>
+                <h1>Installation de poste</h1>
+                <p>Le but de ce projet était la configuration d'une machine virtuelle prêt à l'emploi pour des potentiels développeurs</p>
             </div>
 
           
@@ -73,15 +73,15 @@
                         <h3>Information sur le projet</h3>
                         <hr>
                         <ul>
-                            <li><i class="fa-solid fa-gears"></i>Catégorie : Application console</li>
-                            <li><i class="fa-solid fa-code"></i>Langages : Java</li>
-                            <li><i class="fa-solid fa-calendar-days"></i> Date : Décembre 2022 - Janvier 2023</li>
-                            <li><i class="fa-solid fa-users"></i>Taille d'équipe : Seul / À deux </li>
+                            <li><i class="fa-solid fa-gears"></i>Catégorie : Site Web</li>
+                            <li><i class="fa-solid fa-code"></i>Langages : HTML / CSS</li>
+                            <li><i class="fa-solid fa-calendar-days"></i> Date : Décembre 2022</li>
+                            <li><i class="fa-solid fa-users"></i>Taille d'équipe : À deux </li>
                         </ul>
                     </div>
 
-                    <div class="col2">
-                        <img class="img_preuve" src="../Pictures/biosphere_screen.png" alt="screen_biosphère7">
+                    <div class="col2" >
+                        <img class="img_preuve" src="../Pictures/installationPoste_screen.png" alt="screen_cannaj">
                     </div>
 
              
@@ -89,8 +89,8 @@
 
             <div class="ligne">
                 <h3>Description du projet</h3>
-                <p>Le projet biosphère est un jeu de plateau original où plusieurs actions sont possibles à chaque tour. Le but étant de gagner en aillant plus de points que son adversaire.
-                    Lors de ce projet j'ai appris à implémenter des algorithmes d'IA notamment <span class="orange"> l'algorithme MinMax</span>, à travailler sur des matrices ainsi que sur un projet déjà existant. Lors de la deuxième parti j'ai appris les bases de <span class="orange">git</span> pour travailler à deux sur le projet. </span> </p> 
+                <p>Nous avons configurer une machine virtuelle prête à l’emploi sous Linux. Ce projet nous a permis de consolider nos connaissances des différentes commandes <span class="orange">Bash</span>. Au-delà du côté programmation cela nous a surtout permis de nous entraîner à la réalisation de rapport, à la <span class="orange">présentation de projet</span> ainsi qu’à expliquer et justifier notre <span class="orange">choix des solutions</span>.
+                </p> 
                 <div class="retex_dl_button">
                     <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf"><i class="fa fa-download"></i> Download</a>
                 </div>
