--- a/work.html
+++ b/work.html
@@ -78,7 +78,7 @@
                             <h3>Installation de poste</h3>
                             <h5>VMWare, Bash</h5>
                         </figcaption>
-                        <a href="retex/biosphère.html"></a>
+                        <a href="retex/installationPoste.html"></a>
                     </figure>
     
             
@@ -111,7 +111,7 @@
                             <h3>Site Web</h3>
                             <h5>HTML et CSS</h5>
                         </figcaption>
-                        <a href="#"></a>
+                        <a href="retex/Cannaj.html"></a>
                     </figure>
                     <figure class="snip1504">
                         <img src="Pictures/gestion_putaclick.png" alt="sample57" />
