Site prêt reste à modifier le contenu

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <div class="col1">
 
             <div class="profile">
-                <img src="Pictures/menu_picture.png" alt="" class="img-fluid rounded-circle">
+              <img src="Pictures/profile-pic2.png" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light">Joris Lasserre</h1>
                 <p>Je suis étudiant en <span class="orange">Informatique</span> à l'IUT de Bordeaux. Bienvenue sur mon site !
                 </p>
