--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header id="header">
         <div class="col1">
             <div class="profile">
-                <img src="Pictures/menu_picture.png" alt="" class="img-fluid rounded-circle">
+                <img src="Pictures/profile-pic2.png" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light">Joris Lasserre</h1>
                 <p>Je suis étudiant en <span class="orange">Informatique</span> à l'IUT de Bordeaux. Bienvenue sur mon
                     site !
@@ -62,7 +62,7 @@
             <div class="headerWrapper">
 
                 <h1 >Lasserre Joris </h1>
-                <h6>Student developer</h6>
+                <h6>Développeur web</h6>
                 <hr id="index-hr">
             </div>
 
