--- a/retex/Odomo.html
+++ b/retex/Odomo.html
@@ -31,7 +31,7 @@
         <div class="col1">
 
             <div class="profile">
-                <img src="../Pictures/menu_picture.png" alt="" class="img-fluid rounded-circle">
+                <img src="../Pictures/profile-pic2.png" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light">Joris Lasserre</h1>
                 <p>Je suis étudiant en <span class="orange">Informatique</span> à l'IUT de Bordeaux. Bienvenue sur mon
                     site !
@@ -93,7 +93,7 @@
                     La difficulté était croissante, cela a commencé par de simples modifications de fonctions jusqu'à la création d'une classe complète.
                     Tout au long du projet j'ai appris à travailler sur du <span class="orange">code fourni </span> et des <span class="orange">matrices</span>, ainsi qu'à prendre en main le système de classes. </p> 
                 <div class="retex_dl_button">
-                    <a class="btn" href="odomo.pdf" download="odomo.pdf"><i class="fa fa-download"></i> Download</a>
+                    <a class="btn" href="odomo.pdf" download="odomo.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
                 </div>
                    
             </div>
