--- a/retex/installationPoste.html
+++ b/retex/installationPoste.html
@@ -31,7 +31,7 @@
         <div class="col1">
 
             <div class="profile">
-                <img src="../Pictures/menu_picture.png" alt="" class="img-fluid rounded-circle">
+                <img src="../Pictures/profile-pic2.png" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light">Joris Lasserre</h1>
                 <p>Je suis étudiant en <span class="orange">Informatique</span> à l'IUT de Bordeaux. Bienvenue sur mon
                     site !
@@ -73,8 +73,8 @@
                         <h3>Information sur le projet</h3>
                         <hr>
                         <ul>
-                            <li><i class="fa-solid fa-gears"></i>Catégorie : Site Web</li>
-                            <li><i class="fa-solid fa-code"></i>Langages : HTML / CSS</li>
+                            <li><i class="fa-solid fa-gears"></i>Catégorie : Machine virtuelle</li>
+                            <li><i class="fa-solid fa-code"></i>Langages : Bash</li>
                             <li><i class="fa-solid fa-calendar-days"></i> Date : Décembre 2022</li>
                             <li><i class="fa-solid fa-users"></i>Taille d'équipe : À deux </li>
                         </ul>
@@ -92,7 +92,7 @@
                 <p>Nous avons configurer une machine virtuelle prête à l’emploi sous Linux. Ce projet nous a permis de consolider nos connaissances des différentes commandes <span class="orange">Bash</span>. Au-delà du côté programmation cela nous a surtout permis de nous entraîner à la réalisation de rapport, à la <span class="orange">présentation de projet</span> ainsi qu’à expliquer et justifier notre <span class="orange">choix des solutions</span>.
                 </p> 
                 <div class="retex_dl_button">
-                    <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf"><i class="fa fa-download"></i> Download</a>
+                    <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
                 </div>
                    
             </div>
