--- a/retex/biosphère.html
+++ b/retex/biosphère.html
@@ -31,7 +31,7 @@
         <div class="col1">
 
             <div class="profile">
-                <img src="../Pictures/menu_picture.png" alt="" class="img-fluid rounded-circle">
+                <img src="../Pictures/profile-pic2.png" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light">Joris Lasserre</h1>
                 <p>Je suis étudiant en <span class="orange">Informatique</span> à l'IUT de Bordeaux. Bienvenue sur mon
                     site !
@@ -92,7 +92,7 @@
                 <p>Le projet biosphère est un jeu de plateau original où plusieurs actions sont possibles à chaque tour. Le but étant de gagner en aillant plus de points que son adversaire.
                     Lors de ce projet j'ai appris à implémenter des algorithmes d'IA notamment <span class="orange"> l'algorithme MinMax</span>, à travailler sur des matrices ainsi que sur un projet déjà existant. Lors de la deuxième parti j'ai appris les bases de <span class="orange">git</span> pour travailler à deux sur le projet. </span> </p> 
                 <div class="retex_dl_button">
-                    <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf"><i class="fa fa-download"></i> Download</a>
+                    <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
                 </div>
                    
             </div>
