--- a/about.html
+++ b/about.html
@@ -67,16 +67,15 @@
                             Joris Lasserre
                         </h1>
                         <h3>Étudiant en Informatique</h3>
-                        <p>Je m'appelle Joris Lasserre, j'ai 18 ans et j'étudie l'informatique à l'IUT de Bordeaux. Je suis passionné par l'informatique depuis que j'ai reçu mon premier ordinateur, je suis constamment en train de m'informer dans ce domaine. 
-                            Actuellement je m'interesse à tous ce qui tourne autour du développement web et du web design. Vous voulez en savoir plus ? Jetez un oeil à mon <span class="orange">Portfolio</span> et mon <span class="orange">CV</span> 
+                        <p>JJe m'appelle Joris Lasserre, j'ai 18 ans et j'étudie l'informatique à l'IUT de Bordeaux. Passionné par l'informatique depuis que j'ai reçu mon premier ordinateur, je suis constamment en train de m'informer dans ce domaine. Actuellement, je m'intéresse à tout ce qui tourne autour du développement web et du web design. Vous souhaitez en savoir plus ? Jetez un coup d'œil à mon <span class="orange">portfolio</span>.</span> 
                         </p>
                         <div class="buttons">
                             <a class="button-a " href="work.html"><i class="fa-solid fa-circle-arrow-right"></i>Voir mon portfolio</a>
-                            <a class="button-b " href=""><i class="fa-solid fa-file-lines"></i> Voir mon CV</a>
+                            
             </div>
                     </div>
                     <div class="col2">
-                        <img src="Pictures/jorislasserre.jpg" alt="photographie de Joris lasserre en costume">
+                        <img src="Pictures/profile-pic2.png " alt="photographie de Joris lasserre en costume">
                     </div>
                 </section>
                 
