--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,8 @@
               <section id="contact">
   
                 <h1 class="section-header">Contact</h1>
-                <h2>Je me tiens à votre disposition pour toute autre question</h2>
+                <h2>Je me tiens à votre disposition pour toute autre question via ce formulaire ou via le mail suivant : <a href="mailto:jl.jorislasserre@gmail.com" id="mailto"> jl.jorislasserre@gmail.com</a></h2>
+              
                 <div class="contact-wrapper">
                 
                 <!-- Left contact page --> 
