--- a/retex/Cannaj.html
+++ b/retex/Cannaj.html
@@ -63,7 +63,7 @@
             <div class="retex_title">
                 <a href="../work.html"><i class="fa-solid fa-chevron-left"></i></a>
                 <h1>Cannaj</h1>
-                <p>Cannaj est un site en HTML et CSS mettant en forme les informations obtenues lors d'un précèdent projet en Gestion et Communication</p>
+                <p>Cannaj est un site réalisé en HTML et CSS qui met en forme les informations obtenues lors d'un précédent projet en Gestion et Communication.</p>
             </div>
 
           
@@ -89,8 +89,10 @@
 
             <div class="ligne">
                 <h3>Description du projet</h3>
-                <p>Ce projet consistait à créer un site web uniquement en <span> HTML / CSS</span> regroupant les informations essentielles  de l'analyse de CapGemini (voir le retour d'expérience <a href="GestionCom.html"> Gestion et Communication.</a>) 
-                Nous avons dû aussi créer un persona et faire en sorte que notre site soit adapté à ce persona, dans notre cas nous avions fait un site à l'interface simple adapté à des personnes peu habitué aux nouvelles technologies. Une des consignes était aussi la présence d'une page en <span class="orange">anglais </span>.
+                <p>Ce projet consistait à créer un site web uniquement en <span class="orange">HTML/CSS</span> regroupant les informations essentielles de notre analyse PESTEL de CapGemini.
+                     Nous avons également dû créer un persona et nous assurer que notre site soit adapté à ce persona.
+                      Dans notre cas, nous avons conçu un site à l'interface simple, adapté aux personnes peu habituées aux nouvelles technologies.
+                     Une des consignes était également d'avoir une page en anglais présente sur le site.
                 </p> 
                 <div class="retex_dl_button">
                     <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
