--- a/retex/JPO.html
+++ b/retex/JPO.html
@@ -89,8 +89,7 @@
 
             <div class="ligne">
                 <h3>Description du projet</h3>
-                <p>Ce projet consistait à créer un site web uniquement en <span> HTML / CSS</span> regroupant les informations essentielles  de l'analyse de CapGemini (voir le retour d'expérience <a href="GestionCom.html"> Gestion et Communication.</a>) 
-                Nous avons dû aussi créer un persona et faire en sorte que notre site soit adapté à ce persona, dans notre cas nous avions fait un site à l'interface simple adapté à des personnes peu habitué aux nouvelles technologies. Une des consignes était aussi la présence d'une page en <span class="orange">anglais </span>.
+                <p>Le projet consistait à créer une campagne d'affichage complète, regroupant différents éléments tels que des affiches, un plan, de la signalisation, des badges et un programme. J'ai été chargé de concevoir la <span class="orange">charte graphique</span> du projet et de proposer l'idée de créer plusieurs variantes mettant en avant des informaticiens et informaticiennes connus, tels que Margaret Hamilton ou John von Neumann. Cette initiative m'a permis d'améliorer ma maîtrise d'outils de design tels que <span class="orange">photoshop</span> ou <span class="orange">canva</span>. 
                 </p> 
                 <div class="retex_dl_button">
                     <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
