--- a/retex/Odomo.html
+++ b/retex/Odomo.html
@@ -63,7 +63,8 @@
             <div class="retex_title">
                 <a href="../work.html"><i class="fa-solid fa-chevron-left"></i></a>
                 <h1>Odomo</h1>
-                <p>Le projet Odomo consistait à coder le programme d'une petite centrale domotique puis d'afficher les données dans la console.</p>
+                <p>Le projet Odomo consistait à coder le programme d'une petite centrale domotique puis d'afficher les données dans la console.
+                </p>
             </div>
 
           
