--- a/retex/installationPoste.html
+++ b/retex/installationPoste.html
@@ -63,7 +63,7 @@
             <div class="retex_title">
                 <a href="../work.html"><i class="fa-solid fa-chevron-left"></i></a>
                 <h1>Installation de poste</h1>
-                <p>Le but de ce projet était la configuration d'une machine virtuelle prêt à l'emploi pour des potentiels développeurs</p>
+                <p>Le but de ce projet était de configurer une machine virtuelle prête à l'emploi pour des développeurs potentiels.</p>
             </div>
 
           
@@ -89,7 +89,8 @@
 
             <div class="ligne">
                 <h3>Description du projet</h3>
-                <p>Nous avons configurer une machine virtuelle prête à l’emploi sous Linux. Ce projet nous a permis de consolider nos connaissances des différentes commandes <span class="orange">Bash</span>. Au-delà du côté programmation cela nous a surtout permis de nous entraîner à la réalisation de rapport, à la <span class="orange">présentation de projet</span> ainsi qu’à expliquer et justifier notre <span class="orange">choix des solutions</span>.
+                <p>Nous avons configurer une machine virtuelle prête à l’emploi sous Linux. Ce projet nous a permis de consolider nos connaissances des différentes commandes <span class="orange">Bash</span>.
+                    Ce projet nous a également permis de nous entraîner à la réalisation de rapport, à <span class="orange">présenter de projet</span> ainsi qu’à expliquer et justifier notre <span class="orange">choix des solutions</span>.
                 </p> 
                 <div class="retex_dl_button">
                     <a class="btn" href="Biosphère7.pdf" download="Biosphère7.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
