--- a/about.html
+++ b/about.html
@@ -67,8 +67,7 @@
                             Joris Lasserre
                         </h1>
                         <h3>Étudiant en Informatique</h3>
-                        <p>JJe m'appelle Joris Lasserre, j'ai 18 ans et j'étudie l'informatique à l'IUT de Bordeaux. Passionné par l'informatique depuis que j'ai reçu mon premier ordinateur, je suis constamment en train de m'informer dans ce domaine. Actuellement, je m'intéresse à tout ce qui tourne autour du développement web et du web design. Vous souhaitez en savoir plus ? Jetez un coup d'œil à mon <span class="orange">portfolio</span>.</span> 
-                        </p>
+                        <p>Je m'appelle Joris Lasserre et j'ai 18 ans. Je suis étudiant en informatique à l'IUT de Bordeaux. Depuis que j'ai reçu mon premier ordinateur, ma passion pour l'informatique ne cesse de grandir. Je suis constamment à la recherche d'informations et de nouvelles connaissances dans ce domaine. Actuellement, je me concentre particulièrement sur le développement web et le web design. Si vous souhaitez en savoir plus sur mes compétences et réalisations, je vous invite à consulter mon <span class="orange"> portfolio</span>.
                         <div class="buttons">
                             <a class="button-a " href="work.html"><i class="fa-solid fa-circle-arrow-right"></i>Voir mon portfolio</a>
                             
