--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                     <img src="Pictures/icones/java.png" alt="java">
                     <img src="Pictures/icones/Python.png" alt="python">
                     <img src="Pictures/icones/csharp.png" alt="csharp">
-                    <img src="Pictures/icones/bash.png" alt="bash">
+                    <a href="https://www.youtube.com/watch?v=jeg_TJvkSjg" target="_blank" id="ee"><img id="ee" src="Pictures/icones/bash.png" alt="bash"></a>
                 </div>
     
                 <div class="logo">
