--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="headerWrapper">
 
                 <h1 >Lasserre Joris </h1>
-                <h6>Développeur web</h6>
+                <h6>Développeur Full-Stack</h6>
                 <hr id="index-hr">
             </div>
 
