--- a/about.html
+++ b/about.html
@@ -66,9 +66,17 @@
                         <h1>
                             Joris Lasserre
                         </h1>
-                        <h3>Étudiant en Informatique</h3>
-                        <p>Je m'appelle Joris Lasserre et j'ai 18 ans. Je suis étudiant en informatique à l'IUT de Bordeaux. Depuis que j'ai reçu mon premier ordinateur, ma passion pour l'informatique ne cesse de grandir. Je suis constamment à la recherche d'informations et de nouvelles connaissances dans ce domaine. Actuellement, je me concentre particulièrement sur le développement web et le web design. Si vous souhaitez en savoir plus sur mes compétences et réalisations, je vous invite à consulter mon <span class="orange"> portfolio</span>.
-                        <div class="buttons">
+                        <h3> Étudiant en Informatique | Stagiaire chez Capgemini</h3>
+
+
+👨‍💻 Qui suis-je ?<br>
+Je suis actuellement en deuxième année de BUT Informatique sur le site de Bordeaux-Gradignan. J'ai pour objectif de devenir développeur web full-stack pour allier ma créativité et mes compétences en développement back-end. <br>
+
+💡 Ce que je peux apporter :<br>
+Au cours de ma formation et en autodidacte, j'ai appris à être polyvalent dans divers langages tels qu'HTML, CSS, Javascript, PHP, SQL, Java ... Et maîtrisé des outils tels que Visual Studio, Android Studio, Linux, Git, pour n'en nommer que quelques-uns. Mon dynamisme et mon organisation se révèlent être des atouts précieux dans la réalisation de projets d'équipe. Je suis aussi curieux et j'essaie constamment d'apprendre de nouvelles connaissances ou compétences. <br>
+
+🎨 Passions :<br>
+En dehors du monde informatique, j'apprécie me plonger dans mes lectures ou jouer à des jeux de stratégie tels que Magic: The Gathering et Yu-Gi-Oh. Ces passions contribuent à nourrir mon imagination, aiguiser mon esprit et m'ouvrir à de nouvelles perspectives.</p><br>                       <div class="buttons">
                             <a class="button-a " href="work.html"><i class="fa-solid fa-circle-arrow-right"></i>Voir mon portfolio</a>
                             
             </div>
